--- a/card.html
+++ b/card.html
@@ -1,7 +1,7 @@
 <div class="container">
     <div class="envelope"></div>
     <div class="card">
-      <h1 class="message">Hey,Div! Will you be my valentine?</h1>
+      <h1 class="message">Hey,Pookie 💜! Will you be my valentine?</h1>
       <div class="pikachu">
         <div class="limbs"></div>
         <div class="heart"></div>
